# watchit

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  data.rs  import.rs  main.rs  scrape.rs  tmdb.rs
