[package]
name = "watchit"
version = "0.1.1"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Terminal movie and TV series browser. Rust feature port of IMDB-terminal, built on crust."
license = "Unlicense"
repository = "https://github.com/isene/watchit"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }
glow = { version = "0.1", path = "../glow", package = "fe2o3-glow" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2", features = ["tls", "json"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
